--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 
 		<script src="https://unpkg.com/@webcomponents/webcomponentsjs@^2/webcomponents-bundle.js"></script>
 		<script src="https://unpkg.com/tone"></script>
-		<script src="https://unpkg.com/@tonejs/ui"></script>
+<!--		<script src="https://unpkg.com/@tonejs/ui"></script>-->
+		<script type="text/javascript" src="Tonejs-Instruments.js"></script>
+
 		<!--<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">-->
 
 		<link rel="stylesheet" type="text/css" href="./blog.style.css">
 	<script>
-		let historical = [[0,0]]; // initializing historical variable (even though one exist in the eye rec)
+
+		// let historical = [[0,0]]; // initializing historical variable (even though one exist in the eye rec)
 		let historical1 = [];
 		var synth = new Tone.Synth().toMaster()
 		let h = 440;
@@ -56,6 +59,84 @@
 				})
 			})
 			/*
+    //(2.5) - insert nice playful design
+    */
+
+			firstScreen.style.visibility = "hidden";
+			body.style.backgroundColor = "black";
+			let parent = document.getElementById('body');
+			let canvas = document.createElement('canvas');
+			canvas.id = 'canvas';
+			canvas.width = 640;
+			canvas.height = 480;
+			canvas.style.position = "absolute";
+			canvas.style.marginTop = (window.innerHeight - 480) / 2 + "px";
+			canvas.style.marginLeft = (window.innerWidth - 640) / 2 + "px";
+
+			canvas.style.left = "0px";
+			canvas.style.top = "0px";
+			if(window.innerWidth<640) {
+			canvas.width = window.innerWidth;
+
+			}
+			parent.append(canvas);
+
+			let boxL = document.createElement('div');
+			boxL.id = 'boxL';
+			boxL.style.left = "0px";
+			boxL.style.top = "0px";
+			boxL.style.width = "5vw";
+			boxL.style.height = "100vh";
+			boxL.style.position = "absolute";
+			boxL.style.backgroundColor = "green";
+			boxL.classList = "colorbox";
+			// canvas.style.marginTop = (window.innerHeight - 480) / 2 + "px";
+			// canvas.style.marginLeft = (window.innerWidth - 640) / 2 + "px";
+			parent.append(boxL);
+
+
+			let boxR = document.createElement('div');
+			boxR.id = 'boxR';
+			boxR.style.right = "0px";
+			boxR.style.top = "0px";
+			boxR.style.width = "5vw";
+			boxR.style.height = "100vh";
+			boxR.style.position = "absolute";
+			boxR.style.backgroundColor = "yellow";
+			boxR.classList = "colorbox";
+			// canvas.style.marginTop = (window.innerHeight - 480) / 2 + "px";
+			// canvas.style.marginLeft = (window.innerWidth - 640) / 2 + "px";
+			parent.append(boxR);
+
+
+			let boxU = document.createElement('div');
+			boxU.id = 'boxU';
+			boxU.style.left = "0px";
+			boxU.style.top = "0px";
+			boxU.style.width = "100vw";
+			boxU.style.height = "5vh";
+			boxU.style.position = "absolute";
+			boxU.style.backgroundColor = "blue";
+			boxU.classList = "colorbox";
+			// canvas.style.marginTop = (window.innerHeight - 480) / 2 + "px";
+			// canvas.style.marginLeft = (window.innerWidth - 640) / 2 + "px";
+			parent.append(boxU);
+
+
+			let boxD = document.createElement('div');
+			boxD.id = 'boxD';
+			boxD.style.left = "0px";
+			boxD.style.top = "95vh";
+			boxD.style.width = "100vw";
+			boxD.style.height = "5vh";
+			boxD.style.position = "absolute";
+			boxD.style.backgroundColor = "red";
+			boxD.classList = "colorbox";
+			// canvas.style.marginTop = (window.innerHeight - 480) / 2 + "px";
+			// canvas.style.marginLeft = (window.innerWidth - 640) / 2 + "px";
+			parent.append(boxD);
+
+			/*
 				(3) get the drawing context on the canvas and define a function to transform an RGBA image to grayscale
 			*/
 			var ctx = document.getElementsByTagName('canvas')[0].getContext('2d');
@@ -67,7 +148,9 @@
 						gray[r*ncols + c] = (2*rgba[r*4*ncols+4*c+0]+7*rgba[r*4*ncols+4*c+1]+1*rgba[r*4*ncols+4*c+2])/10;
 				return gray;
 			}
+
 			/*
+
 				(4) this function is called each time a video frame becomes available
 			*/
 			var processfn = function(video, dt) {
@@ -170,7 +253,7 @@
 							// console.log(m);
 							// ctx.lineTo((dets[i][1]+10), (dets[i][0]-m*10));
 							// ctx.lineTo((dets[i][1]-10), (dets[i][0]+m*10));
-							// // ctx.lineTo((firstEye[0] + secondEye[0])/2, (firstEye[1] + secondEye[1])/2);
+								// // ctx.lineTo((firstEye[0] + secondEye[0])/2, (firstEye[1] + secondEye[1])/2);
 							// // ctx.lineTo((firstEye[0] + secondEye[0])/2, (firstEye[1] + secondEye[1])/2);
 							// // ctx.arc(dets[i][1], dets[i][0], dets[i][2]/42, 0, 1*Math.PI, false);
 							// // x, y, r, radian start, radian end
@@ -231,30 +314,36 @@
 									// attempt2 to calculate quadrants and not vectors
 									let dx = historical1[0][0]-cx;
 									let dy = historical1[0][1]-cy;
+									let dxdy = Math.pow(Math.pow(dy/dx,2),0.5);
+									// console.log(dx,dy,dxdy);
 									ctx.font = "30px bold monospace";
-									if (Math.pow(dx,2) > bar2 && Math.pow(dx,2) > bar2 && 2*Math.random() > 1){
+									if (Math.pow(dx,2) > bar2 && Math.pow(dy,2) > bar2 && 2*Math.random() > 1){
 										h = historical1[historical1.length-1][3];
-										if (dx>0 && dy > 0) {
-											ctx.fillText("UR", 10, 50);
-											h=h+h/6
+										if (dy>0 && dxdy > 1) {
+											ctx.fillText("UU", 10, 50);
+											body.style.backgroundColor = "blue";
+											h=120;
 											// synth.triggerAttackRelease(h, '0.1');
-										} else if (dx>0 && dy < 0) {
-											ctx.fillText("DR", 10, 50);
+										} else if (dy<0 && dxdy > 1) {
+											ctx.fillText("DD", 10, 50);
+											body.style.backgroundColor = "red";
 											// synth.triggerAttackRelease(h/2, '0.1');
-											h=h-h/12;
-										} else if (dx<0 && dy < 0) {
-											ctx.fillText("DL", 10, 50);
+											h=240;
+										} else if (dx>0 && dxdy < 1) {
+											ctx.fillText("RR", 10, 50);
+											body.style.backgroundColor = "green";
 											// synth.triggerAttackRelease(h*1.5, '0.1');
-											h=h-h/6;
+											h=360;
 										} else {
-											ctx.fillText("UL", 10, 50);
+											ctx.fillText("LL", 10, 50);
+											body.style.backgroundColor = "yellow";
 											// synth.triggerAttackRelease(h*2, '0.1');
-											h=h+h/12;
+											h=480;
 										}
 										if (h< 60 || h>1200) {
 											h=440;
 										}
-										synth.triggerAttackRelease(h, '0.1');
+										synth.triggerAttackRelease(h,'0.4');
 									}
 										// this was super slow
 									// let angle = Math.atan2(historical1[0][0]-cx,historical1[0][1]-cy) * Math.PI/180;
@@ -327,10 +416,10 @@
 							// }
 							// console.log(firstEye,secondEye,dets[i][0], dets[i][1], dets[i][2]/2);
 							// dets[i][0] - 0.075*dets[i][2];
-						}
+						} else {synth.triggerRelease();}
 
 					}
-			}
+			};
 			/*
 				(5) instantiate camera handling (see https://github.com/cbrandolino/camvas)
 			*/
@@ -342,20 +431,26 @@
 		}
 	</script></head>
 	
-	<body>
+	<body id="body">
+	<div id="firstScreen">
+
 	<a href="www.ceno.fun">powered by ceno</a>
 	<hr>
 			<section>
 				<h3><b>🎹👁 play-eye - face recognition music player</b></h3>
 			<h3>developed by itamar, based on lploc.js & tone.js</h3>
 			<p>pls allow webcam access</p>
-			<p><b>All the processing is done on the client side no server side and no data collected <b></p>
+			<p><b>All the processing is done on the client side no server side and no data collected </b></p>
 				<p> enjoy!</p>
 			</section>
 		<hr>
-		<p></p><center><input type="button" value="Start webcam feed" onclick="button_callback()"></center><p></p>
-		<p></p><center><canvas width="640" height="480"></canvas></center><p></p>
-	
+		<input type="button" class="playbutton" value="play" onclick="button_callback()">
+	</div>
+<!--	<div id="canvas">-->
+<!--		<canvas width="640" height="480"></canvas>-->
+<!--	</div>-->
+<!--	//todo make the canvas size responsive -->
+
 
 	<!-- Fathom analytics -->
 	<!-- <script async="" type="text/javascript" src="./pupilgame_files/analytics.js.download"></script> -->
