--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
-		<title>🎹👁 play-eye - face recognition music player</title>
+		<title>👁+🎐 see-sound - face recognition music player</title>
 <!--		<script async="" src="./tracker.js.download" id="fathom-script"></script>-->
 			<script src="camvas.js"></script>
 		<script src="pico.js"></script>
@@ -513,7 +513,7 @@
 	<a href="www.ceno.fun">powered by ceno</a>
 	<hr>
 			<section>
-				<h3><b>🎹👁 see-sound - face recognition music player / mobile for babies</b></h3>
+				<h3><b>👁+🎐 see-sound - face recognition music player / mobile for babies</b></h3>
 			<h3>developed by itamar, based on lploc.js, tone.js & japanese koshi windchimes</h3>
 			<p>pls allow webcam access</p>
 			<p>to play face the camera and move your head gently or look at different corners of the screen<p>
